parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> scrape
Rule 2     statement -> crawl
Rule 3     scrape -> SCRAPE categories location response page manipulation sorting plot
Rule 4     crawl -> CRAWL categories location instructions manipulation sorting plot
Rule 5     categories -> category
Rule 6     categories -> category COMMA categories
Rule 7     category -> FIELD COLON SELECTOR MODIFIER
Rule 8     category -> FIELD COLON SELECTOR
Rule 9     location -> FROM URL
Rule 10    location -> FROM URL domain
Rule 11    domain -> DOMAIN EQUALS SELECTOR
Rule 12    response -> RESPONSE EQUALS SELECTOR
Rule 13    page -> PAGE EQUALS SELECTOR
Rule 14    page -> <empty>
Rule 15    instructions -> RULES_LABEL EQUALS RULES
Rule 16    manipulation -> filtering aggregation
Rule 17    manipulation -> filtering
Rule 18    manipulation -> <empty>
Rule 19    filtering -> WHERE conditions
Rule 20    conditions -> condition
Rule 21    conditions -> condition AND conditions
Rule 22    conditions -> condition OR conditions
Rule 23    condition -> COLUMN operator INTEGER
Rule 24    condition -> COLUMN operator FLOAT
Rule 25    condition -> COLUMN EQUALS SELECTOR
Rule 26    operator -> EQUALS
Rule 27    operator -> GREATER
Rule 28    operator -> LESS
Rule 29    operator -> GREATER_EQUAL
Rule 30    operator -> LESS_EQUAL
Rule 31    operator -> NOT_EQUAL
Rule 32    aggregation -> GROUP_BY COLUMN
Rule 33    aggregation -> GROUP_BY COLUMN HAVING aggregate
Rule 34    aggregation -> GROUP_BY COLUMN HAVING aggregate operator INTEGER
Rule 35    aggregation -> GROUP_BY COLUMN HAVING aggregate operator FLOAT
Rule 36    aggregate -> AVERAGE
Rule 37    aggregate -> SUM
Rule 38    aggregate -> COUNT
Rule 39    sorting -> ORDER_BY COLUMN
Rule 40    sorting -> ORDER_BY COLUMN DESCENDING
Rule 41    sorting -> <empty>
Rule 42    plot -> BAR_PLOT x_axis COMMA y_axis
Rule 43    plot -> LINE_PLOT x_axis COMMA y_axis
Rule 44    plot -> <empty>
Rule 45    x_axis -> X MODIFIER
Rule 46    y_axis -> Y MODIFIER

Terminals, with rules where they appear

AND                  : 21
AVERAGE              : 36
BAR_PLOT             : 42
COLON                : 7 8
COLUMN               : 23 24 25 32 33 34 35 39 40
COMMA                : 6 42 43
COUNT                : 38
CRAWL                : 4
DESCENDING           : 40
DOMAIN               : 11
EQUALS               : 11 12 13 15 25 26
FIELD                : 7 8
FLOAT                : 24 35
FROM                 : 9 10
GREATER              : 27
GREATER_EQUAL        : 29
GROUP_BY             : 32 33 34 35
HAVING               : 33 34 35
INTEGER              : 23 34
LESS                 : 28
LESS_EQUAL           : 30
LINE_PLOT            : 43
MODIFIER             : 7 45 46
NOT_EQUAL            : 31
OR                   : 22
ORDER_BY             : 39 40
PAGE                 : 13
RESPONSE             : 12
RULES                : 15
RULES_LABEL          : 15
SCRAPE               : 3
SELECTOR             : 7 8 11 12 13 25
SUM                  : 37
URL                  : 9 10
WHERE                : 19
X                    : 45
Y                    : 46
error                : 

Nonterminals, with rules where they appear

aggregate            : 33 34 35
aggregation          : 16
categories           : 3 4 6
category             : 5 6
condition            : 20 21 22
conditions           : 19 21 22
crawl                : 2
domain               : 10
filtering            : 16 17
instructions         : 4
location             : 3 4
manipulation         : 3 4
operator             : 23 24 34 35
page                 : 3
plot                 : 3 4
response             : 3
scrape               : 1
sorting              : 3 4
statement            : 0
x_axis               : 42 43
y_axis               : 42 43

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . scrape
    (2) statement -> . crawl
    (3) scrape -> . SCRAPE categories location response page manipulation sorting plot
    (4) crawl -> . CRAWL categories location instructions manipulation sorting plot

    SCRAPE          shift and go to state 4
    CRAWL           shift and go to state 5

    statement                      shift and go to state 1
    scrape                         shift and go to state 2
    crawl                          shift and go to state 3

state 1

    (0) S' -> statement .



state 2

    (1) statement -> scrape .

    $end            reduce using rule 1 (statement -> scrape .)


state 3

    (2) statement -> crawl .

    $end            reduce using rule 2 (statement -> crawl .)


state 4

    (3) scrape -> SCRAPE . categories location response page manipulation sorting plot
    (5) categories -> . category
    (6) categories -> . category COMMA categories
    (7) category -> . FIELD COLON SELECTOR MODIFIER
    (8) category -> . FIELD COLON SELECTOR

    FIELD           shift and go to state 8

    categories                     shift and go to state 6
    category                       shift and go to state 7

state 5

    (4) crawl -> CRAWL . categories location instructions manipulation sorting plot
    (5) categories -> . category
    (6) categories -> . category COMMA categories
    (7) category -> . FIELD COLON SELECTOR MODIFIER
    (8) category -> . FIELD COLON SELECTOR

    FIELD           shift and go to state 8

    categories                     shift and go to state 9
    category                       shift and go to state 7

state 6

    (3) scrape -> SCRAPE categories . location response page manipulation sorting plot
    (9) location -> . FROM URL
    (10) location -> . FROM URL domain

    FROM            shift and go to state 11

    location                       shift and go to state 10

state 7

    (5) categories -> category .
    (6) categories -> category . COMMA categories

    FROM            reduce using rule 5 (categories -> category .)
    COMMA           shift and go to state 12


state 8

    (7) category -> FIELD . COLON SELECTOR MODIFIER
    (8) category -> FIELD . COLON SELECTOR

    COLON           shift and go to state 13


state 9

    (4) crawl -> CRAWL categories . location instructions manipulation sorting plot
    (9) location -> . FROM URL
    (10) location -> . FROM URL domain

    FROM            shift and go to state 11

    location                       shift and go to state 14

state 10

    (3) scrape -> SCRAPE categories location . response page manipulation sorting plot
    (12) response -> . RESPONSE EQUALS SELECTOR

    RESPONSE        shift and go to state 16

    response                       shift and go to state 15

state 11

    (9) location -> FROM . URL
    (10) location -> FROM . URL domain

    URL             shift and go to state 17


state 12

    (6) categories -> category COMMA . categories
    (5) categories -> . category
    (6) categories -> . category COMMA categories
    (7) category -> . FIELD COLON SELECTOR MODIFIER
    (8) category -> . FIELD COLON SELECTOR

    FIELD           shift and go to state 8

    category                       shift and go to state 7
    categories                     shift and go to state 18

state 13

    (7) category -> FIELD COLON . SELECTOR MODIFIER
    (8) category -> FIELD COLON . SELECTOR

    SELECTOR        shift and go to state 19


state 14

    (4) crawl -> CRAWL categories location . instructions manipulation sorting plot
    (15) instructions -> . RULES_LABEL EQUALS RULES

    RULES_LABEL     shift and go to state 21

    instructions                   shift and go to state 20

state 15

    (3) scrape -> SCRAPE categories location response . page manipulation sorting plot
    (13) page -> . PAGE EQUALS SELECTOR
    (14) page -> .

    PAGE            shift and go to state 23
    WHERE           reduce using rule 14 (page -> .)
    ORDER_BY        reduce using rule 14 (page -> .)
    BAR_PLOT        reduce using rule 14 (page -> .)
    LINE_PLOT       reduce using rule 14 (page -> .)
    $end            reduce using rule 14 (page -> .)

    page                           shift and go to state 22

state 16

    (12) response -> RESPONSE . EQUALS SELECTOR

    EQUALS          shift and go to state 24


state 17

    (9) location -> FROM URL .
    (10) location -> FROM URL . domain
    (11) domain -> . DOMAIN EQUALS SELECTOR

    RESPONSE        reduce using rule 9 (location -> FROM URL .)
    RULES_LABEL     reduce using rule 9 (location -> FROM URL .)
    DOMAIN          shift and go to state 26

    domain                         shift and go to state 25

state 18

    (6) categories -> category COMMA categories .

    FROM            reduce using rule 6 (categories -> category COMMA categories .)


state 19

    (7) category -> FIELD COLON SELECTOR . MODIFIER
    (8) category -> FIELD COLON SELECTOR .

    MODIFIER        shift and go to state 27
    COMMA           reduce using rule 8 (category -> FIELD COLON SELECTOR .)
    FROM            reduce using rule 8 (category -> FIELD COLON SELECTOR .)


state 20

    (4) crawl -> CRAWL categories location instructions . manipulation sorting plot
    (16) manipulation -> . filtering aggregation
    (17) manipulation -> . filtering
    (18) manipulation -> .
    (19) filtering -> . WHERE conditions

    ORDER_BY        reduce using rule 18 (manipulation -> .)
    BAR_PLOT        reduce using rule 18 (manipulation -> .)
    LINE_PLOT       reduce using rule 18 (manipulation -> .)
    $end            reduce using rule 18 (manipulation -> .)
    WHERE           shift and go to state 30

    manipulation                   shift and go to state 28
    filtering                      shift and go to state 29

state 21

    (15) instructions -> RULES_LABEL . EQUALS RULES

    EQUALS          shift and go to state 31


state 22

    (3) scrape -> SCRAPE categories location response page . manipulation sorting plot
    (16) manipulation -> . filtering aggregation
    (17) manipulation -> . filtering
    (18) manipulation -> .
    (19) filtering -> . WHERE conditions

    ORDER_BY        reduce using rule 18 (manipulation -> .)
    BAR_PLOT        reduce using rule 18 (manipulation -> .)
    LINE_PLOT       reduce using rule 18 (manipulation -> .)
    $end            reduce using rule 18 (manipulation -> .)
    WHERE           shift and go to state 30

    manipulation                   shift and go to state 32
    filtering                      shift and go to state 29

state 23

    (13) page -> PAGE . EQUALS SELECTOR

    EQUALS          shift and go to state 33


state 24

    (12) response -> RESPONSE EQUALS . SELECTOR

    SELECTOR        shift and go to state 34


state 25

    (10) location -> FROM URL domain .

    RESPONSE        reduce using rule 10 (location -> FROM URL domain .)
    RULES_LABEL     reduce using rule 10 (location -> FROM URL domain .)


state 26

    (11) domain -> DOMAIN . EQUALS SELECTOR

    EQUALS          shift and go to state 35


state 27

    (7) category -> FIELD COLON SELECTOR MODIFIER .

    COMMA           reduce using rule 7 (category -> FIELD COLON SELECTOR MODIFIER .)
    FROM            reduce using rule 7 (category -> FIELD COLON SELECTOR MODIFIER .)


state 28

    (4) crawl -> CRAWL categories location instructions manipulation . sorting plot
    (39) sorting -> . ORDER_BY COLUMN
    (40) sorting -> . ORDER_BY COLUMN DESCENDING
    (41) sorting -> .

    ORDER_BY        shift and go to state 37
    BAR_PLOT        reduce using rule 41 (sorting -> .)
    LINE_PLOT       reduce using rule 41 (sorting -> .)
    $end            reduce using rule 41 (sorting -> .)

    sorting                        shift and go to state 36

state 29

    (16) manipulation -> filtering . aggregation
    (17) manipulation -> filtering .
    (32) aggregation -> . GROUP_BY COLUMN
    (33) aggregation -> . GROUP_BY COLUMN HAVING aggregate
    (34) aggregation -> . GROUP_BY COLUMN HAVING aggregate operator INTEGER
    (35) aggregation -> . GROUP_BY COLUMN HAVING aggregate operator FLOAT

    ORDER_BY        reduce using rule 17 (manipulation -> filtering .)
    BAR_PLOT        reduce using rule 17 (manipulation -> filtering .)
    LINE_PLOT       reduce using rule 17 (manipulation -> filtering .)
    $end            reduce using rule 17 (manipulation -> filtering .)
    GROUP_BY        shift and go to state 39

    aggregation                    shift and go to state 38

state 30

    (19) filtering -> WHERE . conditions
    (20) conditions -> . condition
    (21) conditions -> . condition AND conditions
    (22) conditions -> . condition OR conditions
    (23) condition -> . COLUMN operator INTEGER
    (24) condition -> . COLUMN operator FLOAT
    (25) condition -> . COLUMN EQUALS SELECTOR

    COLUMN          shift and go to state 42

    conditions                     shift and go to state 40
    condition                      shift and go to state 41

state 31

    (15) instructions -> RULES_LABEL EQUALS . RULES

    RULES           shift and go to state 43


state 32

    (3) scrape -> SCRAPE categories location response page manipulation . sorting plot
    (39) sorting -> . ORDER_BY COLUMN
    (40) sorting -> . ORDER_BY COLUMN DESCENDING
    (41) sorting -> .

    ORDER_BY        shift and go to state 37
    BAR_PLOT        reduce using rule 41 (sorting -> .)
    LINE_PLOT       reduce using rule 41 (sorting -> .)
    $end            reduce using rule 41 (sorting -> .)

    sorting                        shift and go to state 44

state 33

    (13) page -> PAGE EQUALS . SELECTOR

    SELECTOR        shift and go to state 45


state 34

    (12) response -> RESPONSE EQUALS SELECTOR .

    PAGE            reduce using rule 12 (response -> RESPONSE EQUALS SELECTOR .)
    WHERE           reduce using rule 12 (response -> RESPONSE EQUALS SELECTOR .)
    ORDER_BY        reduce using rule 12 (response -> RESPONSE EQUALS SELECTOR .)
    BAR_PLOT        reduce using rule 12 (response -> RESPONSE EQUALS SELECTOR .)
    LINE_PLOT       reduce using rule 12 (response -> RESPONSE EQUALS SELECTOR .)
    $end            reduce using rule 12 (response -> RESPONSE EQUALS SELECTOR .)


state 35

    (11) domain -> DOMAIN EQUALS . SELECTOR

    SELECTOR        shift and go to state 46


state 36

    (4) crawl -> CRAWL categories location instructions manipulation sorting . plot
    (42) plot -> . BAR_PLOT x_axis COMMA y_axis
    (43) plot -> . LINE_PLOT x_axis COMMA y_axis
    (44) plot -> .

    BAR_PLOT        shift and go to state 48
    LINE_PLOT       shift and go to state 49
    $end            reduce using rule 44 (plot -> .)

    plot                           shift and go to state 47

state 37

    (39) sorting -> ORDER_BY . COLUMN
    (40) sorting -> ORDER_BY . COLUMN DESCENDING

    COLUMN          shift and go to state 50


state 38

    (16) manipulation -> filtering aggregation .

    ORDER_BY        reduce using rule 16 (manipulation -> filtering aggregation .)
    BAR_PLOT        reduce using rule 16 (manipulation -> filtering aggregation .)
    LINE_PLOT       reduce using rule 16 (manipulation -> filtering aggregation .)
    $end            reduce using rule 16 (manipulation -> filtering aggregation .)


state 39

    (32) aggregation -> GROUP_BY . COLUMN
    (33) aggregation -> GROUP_BY . COLUMN HAVING aggregate
    (34) aggregation -> GROUP_BY . COLUMN HAVING aggregate operator INTEGER
    (35) aggregation -> GROUP_BY . COLUMN HAVING aggregate operator FLOAT

    COLUMN          shift and go to state 51


state 40

    (19) filtering -> WHERE conditions .

    GROUP_BY        reduce using rule 19 (filtering -> WHERE conditions .)
    ORDER_BY        reduce using rule 19 (filtering -> WHERE conditions .)
    BAR_PLOT        reduce using rule 19 (filtering -> WHERE conditions .)
    LINE_PLOT       reduce using rule 19 (filtering -> WHERE conditions .)
    $end            reduce using rule 19 (filtering -> WHERE conditions .)


state 41

    (20) conditions -> condition .
    (21) conditions -> condition . AND conditions
    (22) conditions -> condition . OR conditions

    GROUP_BY        reduce using rule 20 (conditions -> condition .)
    ORDER_BY        reduce using rule 20 (conditions -> condition .)
    BAR_PLOT        reduce using rule 20 (conditions -> condition .)
    LINE_PLOT       reduce using rule 20 (conditions -> condition .)
    $end            reduce using rule 20 (conditions -> condition .)
    AND             shift and go to state 52
    OR              shift and go to state 53


state 42

    (23) condition -> COLUMN . operator INTEGER
    (24) condition -> COLUMN . operator FLOAT
    (25) condition -> COLUMN . EQUALS SELECTOR
    (26) operator -> . EQUALS
    (27) operator -> . GREATER
    (28) operator -> . LESS
    (29) operator -> . GREATER_EQUAL
    (30) operator -> . LESS_EQUAL
    (31) operator -> . NOT_EQUAL

    EQUALS          shift and go to state 55
    GREATER         shift and go to state 56
    LESS            shift and go to state 57
    GREATER_EQUAL   shift and go to state 58
    LESS_EQUAL      shift and go to state 59
    NOT_EQUAL       shift and go to state 60

    operator                       shift and go to state 54

state 43

    (15) instructions -> RULES_LABEL EQUALS RULES .

    WHERE           reduce using rule 15 (instructions -> RULES_LABEL EQUALS RULES .)
    ORDER_BY        reduce using rule 15 (instructions -> RULES_LABEL EQUALS RULES .)
    BAR_PLOT        reduce using rule 15 (instructions -> RULES_LABEL EQUALS RULES .)
    LINE_PLOT       reduce using rule 15 (instructions -> RULES_LABEL EQUALS RULES .)
    $end            reduce using rule 15 (instructions -> RULES_LABEL EQUALS RULES .)


state 44

    (3) scrape -> SCRAPE categories location response page manipulation sorting . plot
    (42) plot -> . BAR_PLOT x_axis COMMA y_axis
    (43) plot -> . LINE_PLOT x_axis COMMA y_axis
    (44) plot -> .

    BAR_PLOT        shift and go to state 48
    LINE_PLOT       shift and go to state 49
    $end            reduce using rule 44 (plot -> .)

    plot                           shift and go to state 61

state 45

    (13) page -> PAGE EQUALS SELECTOR .

    WHERE           reduce using rule 13 (page -> PAGE EQUALS SELECTOR .)
    ORDER_BY        reduce using rule 13 (page -> PAGE EQUALS SELECTOR .)
    BAR_PLOT        reduce using rule 13 (page -> PAGE EQUALS SELECTOR .)
    LINE_PLOT       reduce using rule 13 (page -> PAGE EQUALS SELECTOR .)
    $end            reduce using rule 13 (page -> PAGE EQUALS SELECTOR .)


state 46

    (11) domain -> DOMAIN EQUALS SELECTOR .

    RESPONSE        reduce using rule 11 (domain -> DOMAIN EQUALS SELECTOR .)
    RULES_LABEL     reduce using rule 11 (domain -> DOMAIN EQUALS SELECTOR .)


state 47

    (4) crawl -> CRAWL categories location instructions manipulation sorting plot .

    $end            reduce using rule 4 (crawl -> CRAWL categories location instructions manipulation sorting plot .)


state 48

    (42) plot -> BAR_PLOT . x_axis COMMA y_axis
    (45) x_axis -> . X MODIFIER

    X               shift and go to state 63

    x_axis                         shift and go to state 62

state 49

    (43) plot -> LINE_PLOT . x_axis COMMA y_axis
    (45) x_axis -> . X MODIFIER

    X               shift and go to state 63

    x_axis                         shift and go to state 64

state 50

    (39) sorting -> ORDER_BY COLUMN .
    (40) sorting -> ORDER_BY COLUMN . DESCENDING

    BAR_PLOT        reduce using rule 39 (sorting -> ORDER_BY COLUMN .)
    LINE_PLOT       reduce using rule 39 (sorting -> ORDER_BY COLUMN .)
    $end            reduce using rule 39 (sorting -> ORDER_BY COLUMN .)
    DESCENDING      shift and go to state 65


state 51

    (32) aggregation -> GROUP_BY COLUMN .
    (33) aggregation -> GROUP_BY COLUMN . HAVING aggregate
    (34) aggregation -> GROUP_BY COLUMN . HAVING aggregate operator INTEGER
    (35) aggregation -> GROUP_BY COLUMN . HAVING aggregate operator FLOAT

    ORDER_BY        reduce using rule 32 (aggregation -> GROUP_BY COLUMN .)
    BAR_PLOT        reduce using rule 32 (aggregation -> GROUP_BY COLUMN .)
    LINE_PLOT       reduce using rule 32 (aggregation -> GROUP_BY COLUMN .)
    $end            reduce using rule 32 (aggregation -> GROUP_BY COLUMN .)
    HAVING          shift and go to state 66


state 52

    (21) conditions -> condition AND . conditions
    (20) conditions -> . condition
    (21) conditions -> . condition AND conditions
    (22) conditions -> . condition OR conditions
    (23) condition -> . COLUMN operator INTEGER
    (24) condition -> . COLUMN operator FLOAT
    (25) condition -> . COLUMN EQUALS SELECTOR

    COLUMN          shift and go to state 42

    condition                      shift and go to state 41
    conditions                     shift and go to state 67

state 53

    (22) conditions -> condition OR . conditions
    (20) conditions -> . condition
    (21) conditions -> . condition AND conditions
    (22) conditions -> . condition OR conditions
    (23) condition -> . COLUMN operator INTEGER
    (24) condition -> . COLUMN operator FLOAT
    (25) condition -> . COLUMN EQUALS SELECTOR

    COLUMN          shift and go to state 42

    condition                      shift and go to state 41
    conditions                     shift and go to state 68

state 54

    (23) condition -> COLUMN operator . INTEGER
    (24) condition -> COLUMN operator . FLOAT

    INTEGER         shift and go to state 69
    FLOAT           shift and go to state 70


state 55

    (25) condition -> COLUMN EQUALS . SELECTOR
    (26) operator -> EQUALS .

    SELECTOR        shift and go to state 71
    INTEGER         reduce using rule 26 (operator -> EQUALS .)
    FLOAT           reduce using rule 26 (operator -> EQUALS .)


state 56

    (27) operator -> GREATER .

    INTEGER         reduce using rule 27 (operator -> GREATER .)
    FLOAT           reduce using rule 27 (operator -> GREATER .)


state 57

    (28) operator -> LESS .

    INTEGER         reduce using rule 28 (operator -> LESS .)
    FLOAT           reduce using rule 28 (operator -> LESS .)


state 58

    (29) operator -> GREATER_EQUAL .

    INTEGER         reduce using rule 29 (operator -> GREATER_EQUAL .)
    FLOAT           reduce using rule 29 (operator -> GREATER_EQUAL .)


state 59

    (30) operator -> LESS_EQUAL .

    INTEGER         reduce using rule 30 (operator -> LESS_EQUAL .)
    FLOAT           reduce using rule 30 (operator -> LESS_EQUAL .)


state 60

    (31) operator -> NOT_EQUAL .

    INTEGER         reduce using rule 31 (operator -> NOT_EQUAL .)
    FLOAT           reduce using rule 31 (operator -> NOT_EQUAL .)


state 61

    (3) scrape -> SCRAPE categories location response page manipulation sorting plot .

    $end            reduce using rule 3 (scrape -> SCRAPE categories location response page manipulation sorting plot .)


state 62

    (42) plot -> BAR_PLOT x_axis . COMMA y_axis

    COMMA           shift and go to state 72


state 63

    (45) x_axis -> X . MODIFIER

    MODIFIER        shift and go to state 73


state 64

    (43) plot -> LINE_PLOT x_axis . COMMA y_axis

    COMMA           shift and go to state 74


state 65

    (40) sorting -> ORDER_BY COLUMN DESCENDING .

    BAR_PLOT        reduce using rule 40 (sorting -> ORDER_BY COLUMN DESCENDING .)
    LINE_PLOT       reduce using rule 40 (sorting -> ORDER_BY COLUMN DESCENDING .)
    $end            reduce using rule 40 (sorting -> ORDER_BY COLUMN DESCENDING .)


state 66

    (33) aggregation -> GROUP_BY COLUMN HAVING . aggregate
    (34) aggregation -> GROUP_BY COLUMN HAVING . aggregate operator INTEGER
    (35) aggregation -> GROUP_BY COLUMN HAVING . aggregate operator FLOAT
    (36) aggregate -> . AVERAGE
    (37) aggregate -> . SUM
    (38) aggregate -> . COUNT

    AVERAGE         shift and go to state 76
    SUM             shift and go to state 77
    COUNT           shift and go to state 78

    aggregate                      shift and go to state 75

state 67

    (21) conditions -> condition AND conditions .

    GROUP_BY        reduce using rule 21 (conditions -> condition AND conditions .)
    ORDER_BY        reduce using rule 21 (conditions -> condition AND conditions .)
    BAR_PLOT        reduce using rule 21 (conditions -> condition AND conditions .)
    LINE_PLOT       reduce using rule 21 (conditions -> condition AND conditions .)
    $end            reduce using rule 21 (conditions -> condition AND conditions .)


state 68

    (22) conditions -> condition OR conditions .

    GROUP_BY        reduce using rule 22 (conditions -> condition OR conditions .)
    ORDER_BY        reduce using rule 22 (conditions -> condition OR conditions .)
    BAR_PLOT        reduce using rule 22 (conditions -> condition OR conditions .)
    LINE_PLOT       reduce using rule 22 (conditions -> condition OR conditions .)
    $end            reduce using rule 22 (conditions -> condition OR conditions .)


state 69

    (23) condition -> COLUMN operator INTEGER .

    AND             reduce using rule 23 (condition -> COLUMN operator INTEGER .)
    OR              reduce using rule 23 (condition -> COLUMN operator INTEGER .)
    GROUP_BY        reduce using rule 23 (condition -> COLUMN operator INTEGER .)
    ORDER_BY        reduce using rule 23 (condition -> COLUMN operator INTEGER .)
    BAR_PLOT        reduce using rule 23 (condition -> COLUMN operator INTEGER .)
    LINE_PLOT       reduce using rule 23 (condition -> COLUMN operator INTEGER .)
    $end            reduce using rule 23 (condition -> COLUMN operator INTEGER .)


state 70

    (24) condition -> COLUMN operator FLOAT .

    AND             reduce using rule 24 (condition -> COLUMN operator FLOAT .)
    OR              reduce using rule 24 (condition -> COLUMN operator FLOAT .)
    GROUP_BY        reduce using rule 24 (condition -> COLUMN operator FLOAT .)
    ORDER_BY        reduce using rule 24 (condition -> COLUMN operator FLOAT .)
    BAR_PLOT        reduce using rule 24 (condition -> COLUMN operator FLOAT .)
    LINE_PLOT       reduce using rule 24 (condition -> COLUMN operator FLOAT .)
    $end            reduce using rule 24 (condition -> COLUMN operator FLOAT .)


state 71

    (25) condition -> COLUMN EQUALS SELECTOR .

    AND             reduce using rule 25 (condition -> COLUMN EQUALS SELECTOR .)
    OR              reduce using rule 25 (condition -> COLUMN EQUALS SELECTOR .)
    GROUP_BY        reduce using rule 25 (condition -> COLUMN EQUALS SELECTOR .)
    ORDER_BY        reduce using rule 25 (condition -> COLUMN EQUALS SELECTOR .)
    BAR_PLOT        reduce using rule 25 (condition -> COLUMN EQUALS SELECTOR .)
    LINE_PLOT       reduce using rule 25 (condition -> COLUMN EQUALS SELECTOR .)
    $end            reduce using rule 25 (condition -> COLUMN EQUALS SELECTOR .)


state 72

    (42) plot -> BAR_PLOT x_axis COMMA . y_axis
    (46) y_axis -> . Y MODIFIER

    Y               shift and go to state 80

    y_axis                         shift and go to state 79

state 73

    (45) x_axis -> X MODIFIER .

    COMMA           reduce using rule 45 (x_axis -> X MODIFIER .)


state 74

    (43) plot -> LINE_PLOT x_axis COMMA . y_axis
    (46) y_axis -> . Y MODIFIER

    Y               shift and go to state 80

    y_axis                         shift and go to state 81

state 75

    (33) aggregation -> GROUP_BY COLUMN HAVING aggregate .
    (34) aggregation -> GROUP_BY COLUMN HAVING aggregate . operator INTEGER
    (35) aggregation -> GROUP_BY COLUMN HAVING aggregate . operator FLOAT
    (26) operator -> . EQUALS
    (27) operator -> . GREATER
    (28) operator -> . LESS
    (29) operator -> . GREATER_EQUAL
    (30) operator -> . LESS_EQUAL
    (31) operator -> . NOT_EQUAL

    ORDER_BY        reduce using rule 33 (aggregation -> GROUP_BY COLUMN HAVING aggregate .)
    BAR_PLOT        reduce using rule 33 (aggregation -> GROUP_BY COLUMN HAVING aggregate .)
    LINE_PLOT       reduce using rule 33 (aggregation -> GROUP_BY COLUMN HAVING aggregate .)
    $end            reduce using rule 33 (aggregation -> GROUP_BY COLUMN HAVING aggregate .)
    EQUALS          shift and go to state 83
    GREATER         shift and go to state 56
    LESS            shift and go to state 57
    GREATER_EQUAL   shift and go to state 58
    LESS_EQUAL      shift and go to state 59
    NOT_EQUAL       shift and go to state 60

    operator                       shift and go to state 82

state 76

    (36) aggregate -> AVERAGE .

    EQUALS          reduce using rule 36 (aggregate -> AVERAGE .)
    GREATER         reduce using rule 36 (aggregate -> AVERAGE .)
    LESS            reduce using rule 36 (aggregate -> AVERAGE .)
    GREATER_EQUAL   reduce using rule 36 (aggregate -> AVERAGE .)
    LESS_EQUAL      reduce using rule 36 (aggregate -> AVERAGE .)
    NOT_EQUAL       reduce using rule 36 (aggregate -> AVERAGE .)
    ORDER_BY        reduce using rule 36 (aggregate -> AVERAGE .)
    BAR_PLOT        reduce using rule 36 (aggregate -> AVERAGE .)
    LINE_PLOT       reduce using rule 36 (aggregate -> AVERAGE .)
    $end            reduce using rule 36 (aggregate -> AVERAGE .)


state 77

    (37) aggregate -> SUM .

    EQUALS          reduce using rule 37 (aggregate -> SUM .)
    GREATER         reduce using rule 37 (aggregate -> SUM .)
    LESS            reduce using rule 37 (aggregate -> SUM .)
    GREATER_EQUAL   reduce using rule 37 (aggregate -> SUM .)
    LESS_EQUAL      reduce using rule 37 (aggregate -> SUM .)
    NOT_EQUAL       reduce using rule 37 (aggregate -> SUM .)
    ORDER_BY        reduce using rule 37 (aggregate -> SUM .)
    BAR_PLOT        reduce using rule 37 (aggregate -> SUM .)
    LINE_PLOT       reduce using rule 37 (aggregate -> SUM .)
    $end            reduce using rule 37 (aggregate -> SUM .)


state 78

    (38) aggregate -> COUNT .

    EQUALS          reduce using rule 38 (aggregate -> COUNT .)
    GREATER         reduce using rule 38 (aggregate -> COUNT .)
    LESS            reduce using rule 38 (aggregate -> COUNT .)
    GREATER_EQUAL   reduce using rule 38 (aggregate -> COUNT .)
    LESS_EQUAL      reduce using rule 38 (aggregate -> COUNT .)
    NOT_EQUAL       reduce using rule 38 (aggregate -> COUNT .)
    ORDER_BY        reduce using rule 38 (aggregate -> COUNT .)
    BAR_PLOT        reduce using rule 38 (aggregate -> COUNT .)
    LINE_PLOT       reduce using rule 38 (aggregate -> COUNT .)
    $end            reduce using rule 38 (aggregate -> COUNT .)


state 79

    (42) plot -> BAR_PLOT x_axis COMMA y_axis .

    $end            reduce using rule 42 (plot -> BAR_PLOT x_axis COMMA y_axis .)


state 80

    (46) y_axis -> Y . MODIFIER

    MODIFIER        shift and go to state 84


state 81

    (43) plot -> LINE_PLOT x_axis COMMA y_axis .

    $end            reduce using rule 43 (plot -> LINE_PLOT x_axis COMMA y_axis .)


state 82

    (34) aggregation -> GROUP_BY COLUMN HAVING aggregate operator . INTEGER
    (35) aggregation -> GROUP_BY COLUMN HAVING aggregate operator . FLOAT

    INTEGER         shift and go to state 85
    FLOAT           shift and go to state 86


state 83

    (26) operator -> EQUALS .

    INTEGER         reduce using rule 26 (operator -> EQUALS .)
    FLOAT           reduce using rule 26 (operator -> EQUALS .)


state 84

    (46) y_axis -> Y MODIFIER .

    $end            reduce using rule 46 (y_axis -> Y MODIFIER .)


state 85

    (34) aggregation -> GROUP_BY COLUMN HAVING aggregate operator INTEGER .

    ORDER_BY        reduce using rule 34 (aggregation -> GROUP_BY COLUMN HAVING aggregate operator INTEGER .)
    BAR_PLOT        reduce using rule 34 (aggregation -> GROUP_BY COLUMN HAVING aggregate operator INTEGER .)
    LINE_PLOT       reduce using rule 34 (aggregation -> GROUP_BY COLUMN HAVING aggregate operator INTEGER .)
    $end            reduce using rule 34 (aggregation -> GROUP_BY COLUMN HAVING aggregate operator INTEGER .)


state 86

    (35) aggregation -> GROUP_BY COLUMN HAVING aggregate operator FLOAT .

    ORDER_BY        reduce using rule 35 (aggregation -> GROUP_BY COLUMN HAVING aggregate operator FLOAT .)
    BAR_PLOT        reduce using rule 35 (aggregation -> GROUP_BY COLUMN HAVING aggregate operator FLOAT .)
    LINE_PLOT       reduce using rule 35 (aggregation -> GROUP_BY COLUMN HAVING aggregate operator FLOAT .)
    $end            reduce using rule 35 (aggregation -> GROUP_BY COLUMN HAVING aggregate operator FLOAT .)

